--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="str04">Euribor</string>
     <string name="str05">Diferencial</string>
     <string name="button01">CALCULAR</string>
-    <string name="textview_mes">Mes:</string>
-    <string name="textview_total">Total:</string>
+    <string name="textview_mes">Mes: 0 €</string>
+    <string name="textview_total">Total: 0 €</string>
     <string name="mesTextview">"Mes: "</string>
     <string name="totalTextView">"Total: "</string>
 </resources>
